kustomize/rest-villains/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: villains-db
    app.openshift.io/vcs-ref: rhbq-2.7
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2022-08-17 - 15:33:04 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: java17-latest-rhbq-2.7
    app: rest-villains
    application: villains-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  port:
    targetPort: 8084
  to:
    kind: Service
    name: rest-villains
